@@ -109,6 +109,6 @@ AnimFrame* GetBestFrame(ItemInfo* item);
 void ClampRotation(Pose& outPose, short angle, short rotation); 
 void DrawAnimatingItem(ItemInfo* item);
 
-Vector3i GetJointPosition(ItemInfo* item, int jointIndex, const Vector3i& offset = Vector3i::Zero);
+Vector3i GetJointPosition(ItemInfo* item, int jointIndex, const Vector3i& relOffset = Vector3i::Zero);
 
 void PerformAnimCommands(ItemInfo* item, bool isFrameBased);
