@@ -13,6 +13,7 @@
 #include "Game/Lara/lara_helpers.h"
 #include "Game/items.h"
 #include "Game/misc.h"
+#include "Game/pickup/pickup.h"
 #include "Game/room.h"
 #include "Specific/setup.h"
 #include "Math/Math.h"
@@ -87,25 +88,6 @@ void DrawNearbyPathfinding(int boxIndex)
 			break;
 		else
 			index++;
-	}
-}
-
-void DropEntityPickups(ItemInfo* item)
-{
-	ItemInfo* pickup = nullptr;
-
-	for (short pickupNumber = item->CarriedItem; pickupNumber != NO_ITEM; pickupNumber = pickup->CarriedItem)
-	{
-		pickup = &g_Level.Items[pickupNumber];
-		pickup->Pose.Position.x = (item->Pose.Position.x & -CLICK(1)) | CLICK(1);
-		pickup->Pose.Position.z = (item->Pose.Position.z & -CLICK(1)) | CLICK(1);
-
-		pickup->Pose.Position.y = GetCollision(pickup->Pose.Position.x, item->Pose.Position.y, pickup->Pose.Position.z, item->RoomNumber).Position.Floor;
-		auto bounds = GameBoundingBox(pickup);
-		pickup->Pose.Position.y -= bounds.Y2;
-
-		ItemNewRoom(pickupNumber, item->RoomNumber);
-		pickup->Flags |= 32;
 	}
 }
 
@@ -826,7 +808,7 @@ void CreatureDie(short itemNumber, bool explode)
 
 	DisableEntityAI(itemNumber);
 	item->Flags |= IFLAG_KILLED | IFLAG_INVISIBLE;
-	DropEntityPickups(item);
+	DropPickups(item);
 }
 
 bool BadFloor(int x, int y, int z, int boxHeight, int nextHeight, short roomNumber, LOTInfo* LOT)
