@@ -157,7 +157,6 @@ void CreatureMood(ItemInfo* item, AI_INFO* AI, bool isViolent);
 void FindAITargetObject(CreatureInfo* creature, short objectNumber);
 void GetAITarget(CreatureInfo* creature);
 int CreatureVault(short itemNumber, short angle, int vault, int shift);
-void DropEntityPickups(ItemInfo* item);
 bool MoveCreature3DPos(Pose* fromPose, Pose* toPose, int velocity, short angleDif, int angleAdd);
 void CreatureYRot2(Pose* fromPose, short angle, short angleAdd);
 bool SameZone(CreatureInfo* creature, ItemInfo* target);
