@@ -14,6 +14,16 @@ namespace TEN::Math::Geometry
 		return Vector3i(TranslatePoint(point.ToVector3(), headingAngle, forward, down, right));
 	}
 
+	Vector3i TranslatePoint(const Vector3i& point, short headingAngle, const Vector3i& relOffset)
+	{
+		return Vector3i(TranslatePoint(point.ToVector3(), headingAngle, relOffset.ToVector3()));
+	}
+
+	Vector3i TranslatePoint(const Vector3i& point, const EulerAngles& orient, const Vector3i& relOffset)
+	{
+		return Vector3i(TranslatePoint(point.ToVector3(), orient, relOffset.ToVector3()));
+	}
+
 	Vector3i TranslatePoint(const Vector3i& point, const EulerAngles& orient, float distance)
 	{
 		return Vector3i(TranslatePoint(point.ToVector3(), orient, distance));
@@ -29,29 +39,31 @@ namespace TEN::Math::Geometry
 		if (forward == 0.0f && down == 0.0f && right == 0.0f)
 			return point;
 
-		float sinHeading = phd_sin(headingAngle);
-		float cosHeading = phd_cos(headingAngle);
-
-		return Vector3(
-			point.x + ((forward * sinHeading) + (right * cosHeading)),
-			point.y + down,
-			point.z + ((forward * cosHeading) - (right * sinHeading)));
+		auto orient = EulerAngles(0, headingAngle, 0);
+		auto relOffset = Vector3(right, down, forward);
+		return TranslatePoint(point, orient, relOffset);
 	}
 
+	Vector3 TranslatePoint(const Vector3& point, short headingAngle, const Vector3& relOffset)
+	{
+		auto orient = EulerAngles(0, headingAngle, 0);
+		return TranslatePoint(point, orient, relOffset);
+	}
+
+	Vector3 TranslatePoint(const Vector3& point, const EulerAngles& orient, const Vector3& relOffset)
+	{
+		auto rotMatrix = orient.ToRotationMatrix();
+		return (point + Vector3::Transform(relOffset, rotMatrix));
+	}
+
+	// NOTE: Roll (Z axis) of EulerAngles orientation is disregarded.
 	Vector3 TranslatePoint(const Vector3& point, const EulerAngles& orient, float distance)
 	{
 		if (distance == 0.0f)
 			return point;
 
-		float sinX = phd_sin(orient.x);
-		float cosX = phd_cos(orient.x);
-		float sinY = phd_sin(orient.y);
-		float cosY = phd_cos(orient.y);
-
-		return Vector3(
-			point.x + (distance * (sinY * cosX)),
-			point.y - (distance * sinX),
-			point.z + (distance * (cosX * cosY)));
+		auto direction = orient.ToDirection();
+		return TranslatePoint(point, direction, distance);
 	}
 
 	Vector3 TranslatePoint(const Vector3& point, const Vector3& direction, float distance)
@@ -102,26 +114,11 @@ namespace TEN::Math::Geometry
 		float distanceAlpha = direction.Dot(origin - linePoint0) / direction.Dot(direction);
 
 		if (distanceAlpha < 0.0f)
-		{
 			return linePoint0;
-		}
 		else if (distanceAlpha > 1.0f)
-		{
-			return linePoint1;
-		}
-
-		return TranslatePoint(linePoint0, direction, distanceAlpha);
-	}
-
-	Vector3 GetTruncatedLineEndpoint(const Vector3& linePoint0, const Vector3& linePoint1, float maxDistance)
-	{
-		auto distance = Vector3::Distance(linePoint0, linePoint1);
-		if (distance <= maxDistance)
 			return linePoint1;
 
-		auto direction = linePoint1 - linePoint0;
-		direction.Normalize();
-		return TranslatePoint(linePoint0, direction, maxDistance);
+		return (linePoint0 + (direction * distanceAlpha));
 	}
 
 	EulerAngles GetOrientToPoint(const Vector3& origin, const Vector3& target)
