@@ -6,13 +6,17 @@ class Vector3i;
 
 namespace TEN::Math::Geometry
 {
-	// Since Y is assumed as the vertical axis, 2D operations are simply done in the XZ plane.
-	// Maybe revise geometry functions to each take a "force" vector argument someday.
+	// Since Y is assumed as the vertical axis, only the Y Euler component needs to be considered and
+	// 2D vector operations can be done in the XZ plane. Maybe revise geometry functions to each take an "up" vector argument someday.
 
 	Vector3i TranslatePoint(const Vector3i& point, short headingAngle, float forward, float down = 0.0f, float right = 0.0f);
+	Vector3i TranslatePoint(const Vector3i& point, short headingAngle, const Vector3i& relOffset);
+	Vector3i TranslatePoint(const Vector3i& point, const EulerAngles& orient, const Vector3i& relOffset);
 	Vector3i TranslatePoint(const Vector3i& point, const EulerAngles& orient, float distance);
 	Vector3i TranslatePoint(const Vector3i& point, const Vector3& direction, float distance);
 	Vector3	 TranslatePoint(const Vector3& point, short headingAngle, float forward, float down = 0.0f, float right = 0.0f);
+	Vector3	 TranslatePoint(const Vector3& point, short headingAngle, const Vector3& relOffset);
+	Vector3  TranslatePoint(const Vector3& point, const EulerAngles& orient, const Vector3& relOffset);
 	Vector3	 TranslatePoint(const Vector3& point, const EulerAngles& orient, float distance);
 	Vector3	 TranslatePoint(const Vector3& point, const Vector3& direction, float distance);
 
@@ -22,7 +26,6 @@ namespace TEN::Math::Geometry
 
 	float		GetDistanceToLine(const Vector3& origin, const Vector3& linePoint0, const Vector3& linePoint1);
 	Vector3		GetClosestPointOnLine(const Vector3& origin, const Vector3& linePoint0, const Vector3& linePoint1);
-	Vector3		GetTruncatedLineEndpoint(const Vector3& linePoint0, const Vector3& linePoint1, float maxDistance);
 	EulerAngles GetOrientToPoint(const Vector3& origin, const Vector3& target);
 
 	bool IsPointInFront(const Pose& pose, const Vector3& target);
