@@ -11,13 +11,15 @@ Version 1.0.6
 * Fix backholster weapons not updating their sound position together with player.
 * Fix black screen bug when there was an obstacle between the fixed camera and the target.
 * Fix underwater caustics not appearing without visiting options menu beforehand.
-* Fix enemy projectile effect colours.
 * Fix TR1 rat which crashed the game when it was killed.
 * Fix TR1 ape climbing.
 * Fix TR2 small spider climbing and pathfinding.
 * Fix TR4 skeleton spawn when used with OCB 3.
 * Fix TR4 SAS teleporting over the blocks he walks by.
 * Fix TR3 Shiva and TR4 baddy 2 not blocking bullets.
+* Fix enemy projectile effect colours.
+* Fix enemy shadow position.
+* Make enemies drop pickups at their origin point, not bounding box centerpoint.
 * Restore original volumetric explosion effects.
 * Add TR3 lizard and Puna.
 * Add TR3 boss effects in ID_BOSS_SHIELD and ID_BOSS_SHOCKWAVE_EXPLOSION slots.
